--- a/locales/nl.json
+++ b/locales/nl.json
@@ -11,6 +11,7 @@
     },
     "imitateOn": "Druk meerdere malen rustig op de aanknop van de afstandbediening",
     "imitateOff": "Druk meerdere malen rustig op de uitknop van de afstandbediening",
+    "error": "Er lijkt iets fout te gaan, probeer het aub opnieuw",
     "imitate2":{
       "testIfWorking": "Test het apparaat met je afstandbediening of de schakelaar hierboven"
     }
